Issue #24000: Improved Argument Clinic's mapping of converters to legacy "format units".  Updated the documentation to match.